# pydantic-ai-subagent-mcp

./: .envrc  .gitignore  .issue  .mcp.json  .project-init  .subagent-mcp.json  .subagent-mcp.servers.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  compute-version.sh  compute_version.py  flake.nix  pyproject.toml
.claude/: .statusline-stats
.github/workflows/: ci.yml  release.yml  tag-release.yml
docs/: ARCHITECTURE.md  DESIGN.md
envrc.d/: 01-python-venv.sh  02-env-vars.sh
scripts/: notification-hook.sh  notification_hook.py
src/pydantic_ai_subagent_mcp/: __init__.py  agent.py  config.py  inbox.py  mcp_loader.py  ollama.py  server.py  session.py  skills.py  tools.py
tests/: _helpers.py  conftest.py  poc_notification_server.py  test_agent_parallel_tools.py  test_config.py  test_inbox.py  test_notification_hook.py  test_server.py  test_session.py  test_session_log.py  test_skills.py  test_streaming_integration.py  test_tools.py
tests/probes/: gemma4_parallel_tools.out.json  gemma4_parallel_tools.py
