[project]
name = "pydantic-ai-subagent-mcp"
version = "0.1.0"
description = "MCP server that proxies Claude Code skills to local Ollama models via a native /api/chat client"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [{ name = "stvhay" }]

dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "srclight>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
subagent-mcp = "pydantic_ai_subagent_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_ai_subagent_mcp"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires a running Ollama endpoint (skipped by default, enable with SUBAGENT_MCP_LIVE_TESTS=1)",
]
